--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,41 @@
+:root {
+  --main-font: "Roboto", sans-serif;
+  --secondary-font: "Raleway", sans-serif;
+  --accent-color: #212121;
+  --secondary-color; #757575
+}
+
+body {
+  font-family: var(--main-font);
+}
+
 /*========= "Логотип" ========*/
 
 .logo-text {
-  font-family: "Raleway", sans-serif;
-  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+  color: #000000;
+}
+
+.logo-text-accent {
   font-weight: bold;
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
   color: #2196f3;
 }
+
 /*========= Конец "Логотип" ========*/
 
 /*==== "Главная навигация" ====*/
 .navigation-list-link {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.02em;
-  color: #212121;
+  color: var(--accent-color);
 }
 
 .navigation-list-link:hover,
@@ -28,13 +44,11 @@
 }
 
 .address-mail {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.02em;
-  color: #757575;
+  color: var(--secondary-color);
 }
 
 .address-mail:hover,
@@ -43,25 +57,20 @@
 }
 
 .address-contact {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.02em;
-  color: #757575;
+  color: var(--secondary-color);
 }
 
 /*==== Конец "Главная навигация" ====*/
 
 /*==== "Герой" ====*/
 .hero-title {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.363;
-  /* or 136% */
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -69,12 +78,9 @@
 }
 
 .hero-btn {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.875;
-  /* identical to box height, or 187% */
   display: flex;
   align-items: center;
   text-align: center;
@@ -86,26 +92,113 @@
 
 /*==== "Особенности" ====*/
 .special-list-text {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 1, 714;
+  line-height: 1.714;
   /* or 171% */
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--secondary-color);
 }
 
 .special-list-title {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
   font-weight: bold;
   font-size: 14px;
-  line-height: 1, 143;
+  line-height: 1.143;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #212121;
+  color: var(--accent-color);
 }
 /*==== Конец "Особенности" ====*/
 
 /*==== "Вид деятельности" ====*/
+.work-title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.167;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+
+/*==== Конец "Вид деятельности" ====*/
+
+/*==== "Наша команда" ====*/
+.team-title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.167;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+
+.team-name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.187;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+.team-name-position {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.187;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+}
+
+/*==== Конец "Наша команда" ====*/
+
+/*==== "Подвал" ====*/
+.footer-address {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  /*color: #ffffff;*/
+}
+.footer-mail {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.174;
+  letter-spacing: 0.03em;
+  /*color: rgba(255, 255, 255, 0.6);*/
+}
+.footer-tel {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  /*color: rgba(255, 255, 255, 0.6);*/
+}
+/*==== Конец "Подвал" ====*/
+
+/*==== Страница "Портфолио" ====*/
+
+.filter-list-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-font);
+}
+
+.projects-text {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--secondary-color);
+}
+.projects-text-item {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.185;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+}
+
+/*==== Конец Страница "Портфолио" ====*/
