--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,9 @@
   --main-font: "Roboto", sans-serif;
   --secondary-font: "Raleway", sans-serif;
   --accent-color: #212121;
-  --secondary-color; #757575
+  --secondary-color; #757575;
+  --hero-color: #ffffff;
+  --accent-color-blue: #2196f3
 }
 
 body {
@@ -24,7 +26,11 @@ body {
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
-  color: #2196f3;
+  color: var(--accent-color-blue);
+}
+/*==== Логотип на темном фоне=====*/
+.light-theme {
+  /*color: var(--hero-color);*/
 }
 
 /*========= Конец "Логотип" ========*/
@@ -40,7 +46,7 @@ body {
 
 .navigation-list-link:hover,
 .navigation-list-link:focus {
-  color: #2196f3;
+  color: var(--accent-color-blue);
 }
 
 .address-mail {
@@ -53,7 +59,7 @@ body {
 
 .address-mail:hover,
 .address-mail:focus {
-  color: #2196f3;
+  color: var(--accent-color-blue);
 }
 
 .address-contact {
@@ -74,7 +80,7 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  /*color: #ffffff;*/
+  /*color: var(--hero-color);*/
 }
 
 .hero-btn {
@@ -85,7 +91,7 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  /*color: #FFFFFF;*/
+  /*color: var(--hero-color);*/
 }
 
 /*==== Конец "Герой" ====*/
@@ -95,7 +101,6 @@ body {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.714;
-  /* or 171% */
   letter-spacing: 0.03em;
   color: var(--secondary-color);
 }
@@ -157,7 +162,7 @@ body {
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
-  /*color: #ffffff;*/
+  /*color: var(--hero-color);*/
 }
 .footer-mail {
   font-weight: normal;
