--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   --accent-color: #212121;
   --secondary-color; #757575;
   --hero-color: #ffffff;
-  --accent-color-blue: #2196f3
+  --accent-color-blue: #2196f3;
 }
 
 body {
