Исправляет замечание ментора
https://prnt.sc/voz37k - не тот шрифт на лого
https://prnt.sc/voz5fw - подчеркиваниесо ссилок уберите и маркеры со списков
https://prnt.sc/voz62r - отмените курсив, где он есть
https://prnt.sc/voz74l - это секция
https://prnt.sc/voz8ey - кнопки не наследуют шрифт - пропишите отдельно

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,13 @@
   --hero-color: #ffffff;
   --accent-color-blue: #2196f3;
 }
-
+a {
+  text-decoration: none; /* Отменяем подчеркивание у ссылки */
+  font-style: normal; /* Убираем курсив на ссылках */
+}
+li {
+  list-style-type: none; /* Убираем маркеры */
+}
 body {
   font-family: var(--main-font);
 }
@@ -14,6 +20,7 @@ body {
 /*========= "Логотип" ========*/
 
 .logo-text {
+  font-family: var(--secondary-font);
   font-weight: bold;
   font-size: 26px;
   line-height: 1.192;
@@ -184,6 +191,7 @@ body {
 /*==== Страница "Портфолио" ====*/
 
 .filter-list-btn {
+  font-family: var(--main-font);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
