--- a/css/styles.css
+++ b/css/styles.css
@@ -6,47 +6,15 @@
   --hero-color: #ffffff;
   --accent-color-blue: #2196f3;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-ol,
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-p {
-  margin: 0;
-}
-
-img {
-  display: block;
-}
-
 a {
   text-decoration: none; /* Отменяем подчеркивание у ссылки */
   font-style: normal; /* Убираем курсив на ссылках */
 }
-
 li {
   list-style-type: none; /* Убираем маркеры */
 }
-
 body {
   font-family: var(--main-font);
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
 }
 
 /*========= "Логотип" ========*/
@@ -70,47 +38,12 @@ body {
 /*==== Логотип на темном фоне=====*/
 .light-theme {
   color: var(--hero-color);
-  background-color: #2f303a;
+  background: #2f303a;
 }
-.header .logo-text {
-  margin-right: 93px;
-}
+
 /*========= Конец "Логотип" ========*/
 
 /*==== "Главная навигация" ====*/
-.header {
-  padding-top: 5px;
-  padding-bottom: 45px;
-  outline: 5px solid green;
-}
-
-.header .container {
-  display: flex;
-  align-items: center;
-}
-
-.header .logo {
-  display: flex;
-  align-items: center;
-}
-
-.navigation-list-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header .address {
-  margin-left: auto;
-}
-
-.address-mail {
-  margin-right: 50px;
-}
-
-.navigation-list {
-  display: flex;
-  align-items: center;
-}
-
 .navigation-list-link {
   font-weight: 500;
   font-size: 14px;
@@ -155,9 +88,6 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  padding-top: 200px;
-  padding-bottom: 280px;
-  margin: auto;
   /*color: var(--hero-color);*/
 }
 
@@ -166,21 +96,13 @@ body {
   font-weight: bold;
   font-size: 16px;
   line-height: 1.875;
+  display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  left: 700px;
-  top: 350px;
-  border-radius: 4px;
-  background-color: var(--accent-color-blue);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  color: var(--hero-color);
+  /*color: var(--hero-color);*/
 }
 
-.hero .hero-btn {
-  display: block;
-  margin: auto;
-}
 /*==== Конец "Герой" ====*/
 
 /*==== "Особенности" ====*/
@@ -200,18 +122,6 @@ body {
   text-transform: uppercase;
   color: var(--accent-color);
 }
-
-.special .special-list {
-  display: flex;
-  margin: auto;
-  padding-top: 94px;
-  padding-bottom: 94px;
-  margin-right: 30px;
-}
-/*.special-list:not(:last-child) {
-  margin-right: 30px;
-}*/
-
 /*==== Конец "Особенности" ====*/
 
 /*==== "Вид деятельности" ====*/
@@ -224,14 +134,6 @@ body {
   color: var(--accent-color);
 }
 
-.work .work-list {
-  display: flex;
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.work-list-item:not(:last-child) {
-  margin-right: 30px;
-}
 /*==== Конец "Вид деятельности" ====*/
 
 /*==== "Наша команда" ====*/
@@ -261,16 +163,6 @@ body {
   color: var(--secondary-color);
 }
 
-.team-list {
-  display: flex;
-  padding-top: 94px;
-  padding-bottom: 94px;
-  align-items: center;
-}
-
-.team-list-item:not(:last-child) {
-  margin-right: 30px;
-}
 /*==== Конец "Наша команда" ====*/
 
 /*==== "Подвал" ====*/
